
[build-system]

requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]

name = "rt-logger"
version = "0.1.0"

description = "A custom logger for cli based apps with colors"

authors = [
    {name = "Rune Tech", email = "runetech2024@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "colorama>=0.4.6"
]
requires-python = ">=3.11"

keywords = ["python", "logging", "logger"]

[project.urls]

Homepage = "https://github.com/runetech0/cli-logger"
github = "https://github.com/runetech0/cli-logger"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"cli_logger/__init__.py" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"README.md" = [
    "{version}",
]

